@@ -315,12 +315,14 @@ MODEL logistic_driver (const int *list, double ***pZ, DATAINFO *pdinfo,
  * 
  * The string @line must contain, in order: (1) the name of a k x 2 matrix
  * containing k coefficients and k associated standard errors and (2) the
- * name of a string containing at least k comma-separated names for
- * the coefficients.  Optionally, @line may contain a third element, the 
- * name of a vector containing p additional statistics.  If this argument 
- * is supplied, then element (2) should contain k + p comma-separated 
- * names, the additional p names to be associated with the additional 
- * statistics. 
+ * name of a string variable containing at least k comma- or space-
+ * separated names for the coefficients (or a string literal on that 
+ * pattern). 
+ *
+ * Optionally, @line may contain a third element, the name of a vector 
+ * containing p additional statistics.  In that case element (2) should 
+ * contain k + p names, the additional p names to be associated with the 
+ * additional statistics. 
  *
  * Returns: 0 on success, non-zero on failure.
  */
@@ -330,48 +332,73 @@ int do_modprint (const char *line, gretlopt opt, PRN *prn)
     gretl_matrix *coef_se = NULL;
     gretl_matrix *addstats = NULL;
     char *parnames = NULL;
-    char **tmp;
-    char s[MAXLEN];
-    int i, err = 0;
+    char *litstr = NULL;
+    const char *s;
+    char name[VNAMELEN];
+    int err = 0;
 
     err = incompatible_options(opt, OPT_C | OPT_R | OPT_T);
     if (err) {
 	return err;
     }
 
-    tmp = malloc(4 * sizeof *tmp);
-    if (tmp == NULL) {
-	return E_ALLOC;
+    /* skip the command word, if present */
+    s = line;
+    s += strspn(s, " ");
+    if (!strncmp(s, "modprint ", 9)) {
+	s += 9;
     }
 
-    *s = '\0';
-    strncat(s, line, MAXLEN - 1);
+    /* first up, name of k x 2 matrix */
+    if (sscanf(s, "%15s", name) == 1) {
+	coef_se = get_matrix_by_name(name);
+	if (coef_se == NULL) {
+	    err = E_UNKVAR;
+	} else if (gretl_matrix_cols(coef_se) != 2) {
+	    gretl_errmsg_set(_("modprint: the first matrix argument must have 2 columns"));
+	    err = E_DATA;
+	}
+    } else {
+	err = E_PARSE;
+    }
 
-    for (i=0; i<4 && !err; i++) {
-	tmp[i] = strtok((i == 0)? s : NULL, " ");
-	if (tmp[i] == NULL && i < 3) { 
-	    /* 3rd argument is optional */
+    if (!err) {
+	/* second up, string containing names */
+	s += strspn(s, " ");
+	s += strlen(name);
+	s += strspn(s, " ");
+	if (*s == '"') {
+	    /* got a string literal */
+	    litstr = gretl_quoted_string_strdup(s, &s);
+	    if (litstr == NULL) {
+		err = E_PARSE;
+	    } else {
+		parnames = litstr;
+		s += strspn(s, " ");
+	    }
+	} else if (sscanf(s, "%15s", name) == 1) {
+	    parnames = get_string_by_name(name);
+	    if (parnames == NULL) {
+		err = E_UNKVAR;
+	    } else {
+		/* advance past string name */
+		s += strspn(s, " ");
+		s += strlen(name);
+		s += strspn(s, " ");
+	    }
+	} else {
 	    err = E_PARSE;
 	}
     }
 
     if (!err) {
-	coef_se = get_matrix_by_name(tmp[1]);
-	parnames = get_string_by_name(tmp[2]);
-	if (coef_se == NULL || parnames == NULL) {
-	    err = E_DATA;
-	}
-    }
-
-    if (!err && gretl_matrix_cols(coef_se) != 2) {
-	gretl_errmsg_set(_("modprint: the first matrix argument must have 2 columns"));
-	err = E_DATA;
-    }
-
-    if (!err && tmp[3] != NULL && *tmp[3] != '\0') {
-	addstats = get_matrix_by_name(tmp[3]);
-	if (addstats == NULL) {
-	    err = E_DATA;
+	/* optional third field: extra matrix */
+	if (*s != '\0') {
+	    sscanf(s, "%15s", name);
+	    addstats = get_matrix_by_name(name);
+	    if (addstats == NULL) {
+		err = E_UNKVAR;
+	    }	    
 	}
     }
 
@@ -390,7 +417,7 @@ int do_modprint (const char *line, gretlopt opt, PRN *prn)
 	err = print_model_from_matrices(coef_se, addstats, parnames, prn);
     }
 
-    free(tmp);
+    free(litstr);
 
     return err;
 }
